--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,12 +29,11 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="help_text">Press the MENU button for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
 
     <string name="help_nav_title">Navigation</string>
-    <string name="help_nav_text">Go to the next or previous chapter by swiping the screen with your finger. </string>
-
-    <string name="help_menu_title">Menu</string>
-    <string name="help_menu_text">Press the MENU button for actions.
-        To download more documents press Menu/Administration/Download Documents
+    <string name="help_nav_text">Go to the next or previous chapter by swiping the screen with your finger.
+        Tap bible text once to toggle full screen mode. Bible windows have menu button on the top-right corner,
+        and you can access window meny long pressing them.
     </string>
+
     <string name="help_speech_title">Speech</string>
     <string name="help_speech_text">Press Speak to access a dialog to start or stop reading</string>
 
